# adaptmesh

./: LICENSE  LICENSE.md  Makefile  README.md  README.org  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
adaptmesh/: __init__.py  criterion.py  initial.py  mark.py  process.py  refine.py  smooth.py  solve.py
adaptmesh/meshplex/: __init__.py  base.py  helpers.py  mesh_tri.py
adaptmesh/optimesh/: LICENSE  cpt.py  helpers.py
adaptmesh/tri/: LICENSE  __init__.py  delaunay.py  voronoi.py
tests/: test_nonconvex.py  test_triangulate.py
