[metadata]
name = adaptmesh
version = 0.1.3
author = Tom Gustafsson
description = Adaptive mesh generation and refinement
url = https://github.com/kinnala/adaptmesh
project_urls =
    Code=https://github.com/kinnala/adaptmesh
    Issues=https://github.com/kinnala/adaptmesh/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    matplotlib
    scipy
    scikit-fem>=2
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
